# suggest-derives

./: AGENTS.md  AGENTS.ts  Cargo.toml  fnox.toml
.repoconf/hooks/: post-init.sh
